refactor: centraliza configuracao CORS e adiciona suporte a producao